--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "devDependencies": {
     "@types/node": "^24.0.10",
     "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "@types/bun": "^1.2.20"
   }
 }
